2005-02-21  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm (top_system_uid): Add interix patch from Todd Vierling
	(_gettemp): Pod patch from Steven Lembark

	* t/tempfile.t: Add test for write proteceted temp file (thanks to
	Slaven Rezic)

	* Temp.pm (_can_do_level): Change argument to rmtree to make it
	attempt to remove write-protected files on cleanup (thanks to
	Slaven Rezic)

2003-08-16  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE V0.14 ---

	* t/object.t: Add test of OO interface and switch to Test::More

	* Temp.pm: Add object-oriented interface.
	
	* Temp.pm: mpeix fixes from Ken Hirsch <hirschk@labcorp.com>

2003-08-15  Tim Jenness  <tjenness@cpan.org>
	
	--- RELEASE V0.13 ---
	
	* Temp.pm: Integrate doc fixes from bleadperl (Slaven Rezic and
	Jeffrey Friedl)

	* Makefile.PL: Add INSTALLDIRS switch on perl version so that the
	module installs into the correct place for perl 5.6.1 and newer.

2002-08-28  Tim Jenness  <timj@jach.hawaii.edu>

	* Temp.pm: Synch with perl 5.8.0 v0.13 MacOS fixes (Chris Nandor)

2001-02-22  Tim Jenness  <timj@jach.hawaii.edu>

	--- RELEASE V0.12 ---
	
	* t/posix.t: The unlink0 tests now skip on failure

	* t/mktemp.t: The unlink0 tests now skip on failure

	* Temp.pm (tmpfile): tmpfile returns undef on failure rather than
	croaking.

2001-02-21  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Temp.pm: 
	      -Add fix for CGI::Carp 
                  [Thanks to John Labovitz <johnl@valiha.inside.sealabs.com>]
              - Use error string to propogate reason rather than a carp

2000-11-24  Tim Jenness  <timj@jach.hawaii.edu>

        --- RELEASE V0.11 ----

	* t/tempfile.t: Add a test to make sure the file is present after
	close and another to use tempfile in a scalar context.

	* Temp.pm: Fix bug on NT with O_TEMPORARY causing the file to be
	removed before the program exits. 

        ---- RELEASE V0.10 ----
	
	* Temp.pm: Incorporate fixes up to bleedperl 7825. Cross platform
	fixes.
